# Kontracts-API

./: .auth0.env.example  .env.example  .gitignore  AUTH0_SETUP.md  AUTHENTICATION.md  Dockerfile  Makefile  README.md  TESTING.md  ZOHO_SETUP.md  alembic.ini  claude.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: DOCKER_SETUP.md
.github/workflows/: docker-build-push.yml
alembic/: env.py
alembic/versions/: 2f4a9f2c5b1e_add_lease_end_date.py  3a9d7c4e1b2f_require_incremental_borrowing_rate.py  5c9f2d8b3e6a_require_end_date_drop_lease_term.py  6b2e7d1a4c9f_drop_payment_fields.py  7a1e9f772ecc_initial_migration.py
app/: auth.py  auth_utils.py  config.py  database.py  main.py  oauth_config.py  supertokens_config.py
app/api/v1/: __init__.py  auth.py  leases.py  payments.py  schedules.py
app/models/: __init__.py  journals.py  lease.py  schedule.py  user.py
app/schemas/: __init__.py  journals.py  lease.py  schedule.py  user.py
app/services/: __init__.py  asc842_calculator.py  asc842_calculator_v1.py  ifrs16_calculator.py  utils.py
config/: ca.pem
scripts/: drop_all_tables.py  drop_all_tables.sql
tests/: .env.test  README.md  __init__.py  alembic.ini  conftest.py  test_api_leases.py  test_api_schedules.py  test_calculators.py  test_models.py
tests/curl_scripts/: 2yr_10pct_increase_payments_test.sh
