[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kontracts-api"
version = "0.0.0"
description = "Kontracts API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]==0.115.0",
  "uvicorn[standard]==0.30.6",
  "SQLAlchemy==2.0.45",
  "psycopg2-binary==2.9.11",
  "alembic==1.13.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "python-dateutil==2.9.0",
  "numpy==2.4.0",
  "pandas==2.3.3",
  "python-multipart==0.0.18",
  "python-dotenv==1.0.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "authlib==1.3.0",
  "itsdangerous==2.1.2",
  "PyJWT==2.9.0",
  "requests==2.32.3",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "pytest-asyncio==0.24.0",
  "httpx==0.27.2",
  "faker==30.3.0",
  "testcontainers[postgresql]==4.8.2",
]
dev = [
  "sqlacodegen==3.0.0rc5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
